--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,24 @@ body {
   cursor: pointer;
 }
 
+/* ------------------------ FOOTER ------------------------ */
+.footer {
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  padding: 1rem 2rem;
+  color: var(--color-grey-5);
+}
+
+.footer p {
+  max-width: none;
+}
+
+.footer span {
+  font-weight: 700;
+}
+
 /* min-width: 600px */
 @media only screen and (min-width: 800px) {
   .container {
